# signaldeck-core

./: README.md  pyproject.toml
signaldeck_core/: app.py  app_factory.py  app_headless.py  app_i.py  app_i_migration.py  cli.py  logging_setup.py  render_config.py  routes.py
signaldeck_core/commands/: wait_for_value.py
signaldeck_core/domain/: group_factory.py  processor_factory.py
signaldeck_core/models/: action.py  context_impl.py  group.py  manager.py  translator.py
signaldeck_core/persistence/: csv_store.py  sqlite_store.py
signaldeck_core/services/: action_dispatcher.py  asyncio_runtime.py  config_loader.py  plugin_service.py  scheduler_service.py  ui_asset_service.py
signaldeck_core/templates/core/: cronjob.html  group.html
