[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signaldeck-core"
version = "0.1.3"
description = "SignalDeck core runtime"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask>=3.0",
  "signaldeck-sdk>=0.1.3",
  "signaldeck-ui>=0.1.3",
  "python-crontab>=3.3.0"
]

[project.scripts]
signaldeck = "signaldeck_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["signaldeck_core*"]

[tool.setuptools.package-data]
signaldeck_core = [
  "templates/**/*"
]
